updating all after login

--- a/Frontend/src/app/all-books/all-books.component.html
+++ b/Frontend/src/app/all-books/all-books.component.html
@@ -1,4 +1,29 @@
 
+
+
+
+<aside>
+
+  <div id="d3">
+    <ul>
+
+      <li><a class="dropdown-item" id="g" [routerLink]="'/all'">All</a></li>
+      <li><a class="dropdown-item" id="l" [routerLink]="'/read'">Read</a></li>
+      <li><a class="dropdown-item" id="l" [routerLink]="'/curntltyReading'">Currently Reading</a></li>
+      <li><a class="dropdown-item" id="l" [routerLink]="'/wantToRead'">Want To Read</a></li>
+    </ul>
+
+    <div id="dd">
+
+
+
+
+    </div>
+  </div>
+</aside>
+
+
+
 <div class="pos">
   <section>
     <div>
@@ -37,7 +62,7 @@
         <section>
           <div id="all">
 
-            All
+           <p id="read"> All</p>
 
           </div>
 
