--- a/Frontend/src/app/nav-bar/nav-bar.component.html
+++ b/Frontend/src/app/nav-bar/nav-bar.component.html
@@ -26,7 +26,7 @@
             <a class="nav-link " [routerLink]='"/about"'>About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link  ">Terms & Conditions</a>
+            <a class="nav-link " [routerLink]='"/terms"'>Terms & Conditions</a>
           </li>
         </ul>
       </div>
