adjust margin-left at home

--- a/Frontend/src/app/home/home.component.html
+++ b/Frontend/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 <div style="margin-top: 30px;">
     <a href="#authBlk"><img class="imgs-blocks text-center border rounded-3" style="left:0%;top:22%;position: absolute;background-color: #f9be75;" src="../../assets/icon-author.png"></a>
     <a href="#catBlk"><img class="imgs-blocks text-center border rounded-3" style="left:0%;top:40%;position: absolute;background-color: #f9be75;" src="../../assets/categories-icon.png"></a>
-    <a href="#bookBlk"><img class="imgs-blocks text-center border rounded-3" style="left:0%;top:59%;position: absolute;background-color: #f9be75;" src="../../assets/book-square.png"></a>
+    <a href="#bookBlk"> <img  class="imgs-blocks text-center border rounded-3" style="left:0%;top:59%;position: absolute;background-color: #f9be75;" src="../../assets/book-square.png"></a>
     <section class="header">
       <div class="container">
         
@@ -23,7 +23,7 @@
     
     <br>
     <!-- ------------------------Blocks------- -->
-    <div class="container  d-flex justify-content-center ms-5">
+    <div class="container  d-flex justify-content-center " style="margin-left: 7%;">
       <div class="row">
         <!-- fist block -->
         <div id="authBlk" class="col-md-12">
