--- a/Frontend/src/app/all-books/all-books.component.css
+++ b/Frontend/src/app/all-books/all-books.component.css
@@ -56,7 +56,7 @@
   }
   .center{
 
-    margin-left: auto;
+    margin-left: 250px;
     margin-right: auto;
     text-align: center;
     margin-top: -1120px; 
