update path for nav-bar

--- a/Frontend/src/app/aboutus/aboutus.component.html
+++ b/Frontend/src/app/aboutus/aboutus.component.html
@@ -1,4 +1,4 @@
-<div id="carouselMultiItemExample" class="carousel slide carousel-dark text-center" data-mdb-ride="carousel">
+<hr><div id="carouselMultiItemExample" class="carousel slide carousel-dark text-center aboutus" data-mdb-ride="carousel">
     <div class="carousel-inner py-4">
         <div class="carousel-item active">
             <div class="container">
