--- a/Frontend/src/app/admin-login/admin-login.component.html
+++ b/Frontend/src/app/admin-login/admin-login.component.html
@@ -21,10 +21,9 @@
                             <p *ngIf="loginForm.get('email')?.errors?.['email']">email is inavalid</p>
                         </div>
                     </div>
-
                     <div class="form-group">
                         <!-- <label for="password" class=" userIN">password</label> -->
-                        <input formControlName="password" class="form-control " type="text" name="" id="password"
+                        <input formControlName="password" class="form-control " type="password" name="" id="password"
                             placeholder="Enter your password ">
                         <div *ngIf="loginForm.get('password')?.errors != null && loginForm.get('password')?.touched "
                             class="alert my-2  alert-danger">
@@ -39,3 +38,8 @@
         </div>
     </div>
 </div>
+
+
+
+
+
