--- a/Frontend/src/app/admin-books/admin-books.component.html
+++ b/Frontend/src/app/admin-books/admin-books.component.html
@@ -71,7 +71,7 @@
                 <form #updateForm="ngForm" (ngSubmit)='updateBook()'>
                     <div class="form-group">
                         <label for="photo">photo</label>
-                        <input type="text" #photo [(ngModel)]="bookToUpdate.photo" class="form-control" name="photo" id="photo">
+                        <input type="file" #photo (change)="uploadimg($event)" class="form-control" name="photo" id="photo">
                     </div>
                     <div class="form-group">
                         <label for="name">Book Name</label>
@@ -90,7 +90,7 @@
                     </div>
                     <div class="form-group">
                         <label for="Rating">Rating</label>
-                        <input type="text" #Rating [(ngModel)]="bookToUpdate.Rating" class="form-control" name="Rating" id="Rating">
+                        <input type="number" #Rating [(ngModel)]="bookToUpdate.Rating" class="form-control" max="5" name="Rating" id="Rating">
                     </div>
                     <div class="d-flex ">
                         <div><input type="submit" value="Update" class="btn btn-primary mr-4 "></div>
