--- a/Frontend/src/app/admin-books/admin-books.component.html
+++ b/Frontend/src/app/admin-books/admin-books.component.html
@@ -46,9 +46,27 @@
             <div class="card m-5" style="padding: 20px;">
                 <form #registerForm="ngForm" (ngSubmit)="register(registerForm)">
                     <div class="form-group">
+                        <label for="photo">photo</label>
+                        <input type="file" #photo (change)="uploadimg($event)" class="form-control" name="photo" id="photo">
+                    </div>
+                    <div class="form-group">
                         <label for="name">Book Name </label>
                         <input type="text" (ngModel)="name" name="name" id="name" class="form-control"
                             placeholder="Book Name">
+                    </div>
+                    <div class="form-group">
+                        <label for="CategoryId">category id</label>
+                        <input type="text" #CategoryId (ngModel)="bookToUpdate.CategoryId" class="form-control" name="CategoryId"
+                            id="CategoryId">
+                    </div>
+                    <div class="form-group">
+                        <label for="AuthorId">Author id</label>
+                        <input type="text" #AuthorId [(ngModel)]="bookToUpdate.AuthorId" class="form-control" name="AuthorId" id="AuthorId">
+                    </div>
+                    <div class="form-group">
+                        <label for="Rating">Rating</label>
+                        <input type="number" #Rating [(ngModel)]="bookToUpdate.Rating" class="form-control" max="5" name="Rating"
+                            id="Rating">
                     </div>
                     <div class="form-group">
                         <input type="submit" value="Add" class="btn btn-primary mr-4 ">
